Fix issue appearing horizontal scrollbar.

--- a/css/marching.scss
+++ b/css/marching.scss
@@ -426,13 +426,6 @@ body > * > footer {
 		.col-md-3 {
 			padding-left: 0;
 		}
-	
-		.col-md-4 {	
-			img {
-				margin-top: 21px;
-				margin-bottom: 21px;
-			}
-		}
 	}
 }
 
